--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
   }
 </style>
 
-<h1>Sign Up for Premium Corgi Content</h1>
+<h1>Get Your NFT</h1>
 
 <div class="user-info">
   <button id="left">Log In</button>
